package sync;
syntax = "proto3";

message SyncMsg {
  oneof type {
    RichLogootSOperationMsg richLogootSOpMsg = 1;
    QuerySyncMsg querySync = 2;
    ReplySyncMsg replySync = 3;
  }
}

message RichLogootSOperationMsg {
  int32 id = 1;
  int32 clock = 2;
  oneof type {
    LogootSAddMsg logootSAddMsg = 3;
    LogootSDelMsg logootSDelMsg = 4;
  }
}

message LogootSAddMsg {
  IdentifierMsg id = 1;
  string content = 2;
}

message IdentifierMsg {
  repeated int32 base = 1;
  int32 last = 2;
}

message LogootSDelMsg {
  repeated IdentifierIntervalMsg lid = 1;
}

message IdentifierIntervalMsg {
  repeated int32 base = 1;
  int32 begin = 2;
  int32 end = 3;
}

message QuerySyncMsg {
  map<int32, int32> vector = 1;
}

message ReplySyncMsg {
  repeated RichLogootSOperationMsg richLogootSOpsMsg = 1;
  repeated IntervalMsg intervals = 2;
}

message IntervalMsg {
  int32 id = 1;
  int32 begin = 2;
  int32 end = 3;
}
